noinst_LIBRARIES = liblmn_elm.a

liblmn_elm_a_CFLAGS =                               \
        -I../                                            \
        -I../../third_party/zdelta-2.1                   \
        $(CFLAGS)

liblmn_elm_a_SOURCES =                              \
	element.h \
	alloc.c \
	clock.c clock.h \
	error.c error.h \
	file_util.c file_util.h \
	internal_hash.c internal_hash.h \
	lmnstring.c lmnstring.h \
	lmntal_thread.c lmntal_thread.h \
	memory_pool.c memory_pool.h \
	port.c port.h \
	process_util.c process_util.h \
	queue.c queue.h \
	st.c st.h \
	util.c util.h \
	vector.c vector.h
	