noinst_LIBRARIES = liblmn_elm.a

liblmn_elm_a_CFLAGS =                               \
        -I../                                            \
        -I../../third_party/zdelta-2.1                   \
        $(CFLAGS)

liblmn_elm_a_SOURCES =                              \
	element.h \
	alloc.cpp \
	clock.cpp clock.h \
	error.cpp error.h \
	file_util.cpp file_util.h \
	internal_hash.cpp internal_hash.h \
	lmnstring.cpp lmnstring.h \
	lmntal_thread.cpp lmntal_thread.h \
	memory_pool.cpp memory_pool.h \
	port.cpp port.h \
	process_util.cpp process_util.h \
	queue.cpp queue.h \
	st.cpp st.h \
	util.cpp util.h \
	vector.cpp vector.h \
	instruction.cpp
	