noinst_LIBRARIES = liblmn_ffi.a


liblmn_ffi_a_DEPENDENCIES =                         \
        ../../third_party/zdelta-2.1/libzd_in_slim.a
liblmn_ffi_a_CFLAGS =                               \
        -I../                                            \
        -I../../third_party/zdelta-2.1                   \
        $(CFLAGS)

liblmn_ffi_a_SOURCES =                              \
	jni_lmntal.cpp jni_lmntal.h \
	lmntal_system_adapter.cpp lmntal_system_adapter.h
