noinst_LIBRARIES = liblmn_utility.a

liblmn_utility_a_CFLAGS = \
        -I../             \
        $(CFLAGS)

liblmn_utility_a_SOURCES =       \
	vector.c        vector.h       \
	queue.c         queue.h        \
	st.c            st.h           \
	process_util.c  process_util.h \
	file_util.c     file_util.h    \
	util.c          util.h         \
	internal_hash.c internal_hash.h\
	visitlog.c      visitlog.h     \
	lmntal_thread.c lmntal_thread.h


