noinst_LIBRARIES = liblmn_vm.a

liblmn_vm_a_CFLAGS =                               \
        -I../                                            \
        -I../../third_party/zdelta-2.1                   \
        $(CFLAGS)

liblmn_vm_a_SOURCES =                              \
	vm.c \
	membrane.c membrane.h \
	atom.c atom.h \
	ccallback.c ccallback.h \
	dumper.c dumper.h \
	functor.c functor.h \
	firstclass_rule.c firstclass_rule.h \
	hyperlink.c hyperlink.h \
	instruction.c　instruction.h \
	memstack.c memstack.h \
	normal_thread.c normal_thread.h \
	react_context.c react_context.h \
	rule.c rule.h \
	special_atom.c special_atom.h \
	symbol.c symbol.h \
	system_ruleset.c system_ruleset.h \
	task.c task.h \
	process_table.cpp process_table.h