noinst_LIBRARIES = liblmn_vm.a

liblmn_vm_a_CFLAGS =                               \
        -I../                                            \
        -I../../third_party/zdelta-2.1                   \
        $(CFLAGS)

liblmn_vm_a_SOURCES =                              \
	vm.cpp \
	membrane.cpp membrane.h \
	membrane.hpp \
	atomlist.hpp \
	atom.cpp atom.h \
	ccallback.cpp ccallback.h \
	dumper.cpp dumper.h \
	functor.cpp functor.h \
	firstclass_rule.cpp firstclass_rule.h \
	hyperlink.cpp hyperlink.h \
	instruction.cpp　instruction.h \
	memstack.cpp memstack.h \
	normal_thread.cpp normal_thread.h \
	react_context.cpp react_context.h \
	rule.cpp rule.hpp \
	special_atom.cpp special_atom.h \
	symbol.cpp symbol.h \
	system_ruleset.cpp system_ruleset.h \
	task.cpp task.h \
	process_table.cpp process_table.h \
	simply_process_table.cpp simply_process_table.h        \
	trace_log.h              trace_log.cpp                 \
	simply_trace_log.h       simply_trace_log.cpp
