
LOG_DRIVER = env AM_TAP_AWK='$(AWK)' $(SHELL) \
                  $(top_srcdir)/test/tap-driver.sh

TESTS = \
	testsuite/append/check.sh \
	testsuite/basic/check.sh \
	testsuite/unification/check.sh \
	testsuite/proxyatom/check.sh \
	testsuite/proccxt/check.sh \
	testsuite/proccxt_free/check.sh \
	testsuite/rulecxt/check.sh \
	testsuite/miscellaneous/check.sh \
	testsuite/guard_int/check.sh \
	testsuite/guard_float/check.sh \
	testsuite/guard_string/check.sh \
	testsuite/guard_unary/check.sh \
	testsuite/guard_ground/check.sh \
	testsuite/guard_ground_multi/check.sh \
	testsuite/hyperlink/check.sh \
	testsuite/simpagation/check.sh \
	testsuite/count/check.sh \
	testsuite/mem_name/check.sh \
	testsuite/uniq/check.sh \
	testsuite/cslmntal/check.sh


check_DATA = \
	testsuite/append/append1.il \
	testsuite/append/append2.il \
	testsuite/append/append3.il \
	testsuite/append/append4.il \
	testsuite/basic/basic1.il \
	testsuite/basic/basic2.il \
	testsuite/basic/basic3.il \
	testsuite/basic/basic4.il \
	testsuite/basic/basic5.il \
	testsuite/unification/case1.il \
	testsuite/unification/case2.il \
	testsuite/unification/case3.il \
	testsuite/unification/case4.il \
	testsuite/unification/case5.il \
	testsuite/unification/case6.il \
	testsuite/unification/case7.il \
	testsuite/unification/case8.il \
	testsuite/unification/case9.il \
	testsuite/proxyatom/case1.il \
	testsuite/proxyatom/case2.il \
	testsuite/proxyatom/case3.il \
	testsuite/proccxt/case1.il \
	testsuite/proccxt/case2.il \
	testsuite/proccxt/case3.il \
	testsuite/proccxt/case4.il \
	testsuite/proccxt/case5.il \
	testsuite/proccxt/case6.il \
	testsuite/proccxt/case7.il \
	testsuite/proccxt/case8.il \
	testsuite/proccxt/case9.il \
	testsuite/proccxt/case10.il \
	testsuite/proccxt/case11.il \
	testsuite/proccxt/case12.il \
	testsuite/proccxt/case13.il \
	testsuite/proccxt/case14.il \
	testsuite/rulecxt/case1.il \
	testsuite/proccxt_free/case1.il \
	testsuite/proccxt_free/case2.il \
	testsuite/proccxt_free/case3.il \
	testsuite/proccxt_free/case4.il \
	testsuite/miscellaneous/case1.il \
	testsuite/miscellaneous/case2.il \
	testsuite/miscellaneous/case3.il \
	testsuite/miscellaneous/case4.il \
	testsuite/miscellaneous/case5.il \
	testsuite/miscellaneous/case6.il \
	testsuite/miscellaneous/case7.il \
	testsuite/miscellaneous/case8.il \
	testsuite/miscellaneous/case9.il \
	testsuite/miscellaneous/case10.il \
	testsuite/miscellaneous/case11.il \
	testsuite/miscellaneous/case12.il \
	testsuite/miscellaneous/case13.il \
	testsuite/miscellaneous/case14.il \
	testsuite/miscellaneous/case15.il \
	testsuite/miscellaneous/case16.il \
	testsuite/miscellaneous/case17.il \
	testsuite/miscellaneous/case18.il \
	testsuite/miscellaneous/case19.il \
	testsuite/miscellaneous/case20.il \
	testsuite/guard_int/case1.il \
	testsuite/guard_int/case2.il \
	testsuite/guard_int/case3.il \
	testsuite/guard_int/case4.il \
	testsuite/guard_int/case5.il \
	testsuite/guard_int/case6.il \
	testsuite/guard_int/case7.il \
	testsuite/guard_int/case8.il \
	testsuite/guard_int/case9.il \
	testsuite/guard_int/case10.il \
	testsuite/guard_int/case11.il \
	testsuite/guard_int/case12.il \
	testsuite/guard_int/case13.il \
	testsuite/guard_int/case14.il \
	testsuite/guard_int/case15.il \
	testsuite/guard_int/case16.il \
	testsuite/guard_int/case17.il \
	testsuite/guard_int/case18.il \
	testsuite/guard_int/case19.il \
	testsuite/guard_int/case20.il \
	testsuite/guard_int/case21.il \
	testsuite/guard_int/case22.il \
	testsuite/guard_float/case1.il \
	testsuite/guard_float/case2.il \
	testsuite/guard_float/case3.il \
	testsuite/guard_float/case4.il \
	testsuite/guard_float/case5.il \
	testsuite/guard_float/case6.il \
	testsuite/guard_float/case7.il \
	testsuite/guard_float/case8.il \
	testsuite/guard_float/case9.il \
	testsuite/guard_float/case10.il \
	testsuite/guard_float/case11.il \
	testsuite/guard_float/case12.il \
	testsuite/guard_float/case13.il \
	testsuite/guard_float/case14.il \
	testsuite/guard_float/case15.il \
	testsuite/guard_string/case1.il \
	testsuite/guard_string/case2.il \
	testsuite/guard_string/case3.il \
	testsuite/guard_string/case4.il \
	testsuite/guard_string/case5.il \
	testsuite/guard_string/case6.il \
	testsuite/guard_unary/case1.il \
	testsuite/guard_unary/case2.il \
	testsuite/guard_unary/case3.il \
	testsuite/guard_unary/case4.il \
	testsuite/guard_ground/case1.il \
	testsuite/guard_ground/case2.il \
	testsuite/guard_ground/case3.il \
	testsuite/guard_ground/case4.il \
	testsuite/guard_ground/case5.il \
	testsuite/guard_ground/case6.il \
	testsuite/guard_ground/case7.il \
	testsuite/guard_ground/case8.il \
	testsuite/guard_ground/case9.il \
	testsuite/guard_ground/case10.il \
	testsuite/guard_ground/case11.il \
	testsuite/guard_ground/case12.il \
	testsuite/guard_ground/case13.il \
	testsuite/guard_ground/case14.il \
	testsuite/guard_ground/case15.il \
	testsuite/guard_ground/case16.il \
	testsuite/guard_ground/case17.il \
	testsuite/guard_ground/case18.il \
	testsuite/guard_ground/case19.il \
	testsuite/guard_ground/case20.il \
	testsuite/guard_ground/case21.il \
	testsuite/guard_ground/case22.il \
	testsuite/guard_ground/case23.il \
	testsuite/guard_ground/case24.il \
	testsuite/guard_ground/case25.il \
	testsuite/guard_ground/case26.il \
	testsuite/guard_ground/case27.il \
	testsuite/guard_ground/case28.il \
	testsuite/guard_ground/case29.il \
	testsuite/guard_ground/case30.il \
	testsuite/guard_ground/case31.il \
	testsuite/guard_ground_multi/case1.il \
	testsuite/guard_ground_multi/case2.il \
	testsuite/guard_ground_multi/case3.il \
	testsuite/guard_ground_multi/case4.il \
	testsuite/guard_ground_multi/case5.il \
	testsuite/guard_ground_multi/case6.il \
	testsuite/guard_ground_multi/case7.il \
	testsuite/guard_ground_multi/case8.il \
	testsuite/guard_ground_multi/case9.il \
	testsuite/guard_ground_multi/case10.il \
	testsuite/guard_ground_multi/case11.il \
	testsuite/guard_ground_multi/case12.il \
	testsuite/guard_ground_multi/case13.il \
	testsuite/guard_ground_multi/case14.il \
	testsuite/guard_ground_multi/case15.il \
	testsuite/guard_ground_multi/case16.il \
	testsuite/hyperlink/case1.il \
	testsuite/hyperlink/case2.il \
	testsuite/hyperlink/case3.il \
	testsuite/hyperlink/case4.il \
	testsuite/hyperlink/case5.il \
	testsuite/simpagation/case1.il \
	testsuite/simpagation/case2.il \
	testsuite/count/case1.il \
	testsuite/count/case2.il \
	testsuite/count/case3.il \
	testsuite/mem_name/case1.il \
	testsuite/mem_name/case2.il \
	testsuite/uniq/case1.il \
	testsuite/uniq/case2.il \
	testsuite/uniq/case3.il \
	testsuite/uniq/case4.il \
	testsuite/uniq/case5.il \
	testsuite/uniq/case6.il \
	testsuite/cslmntal/skiplist1.il \
	testsuite/cslmntal/skiplist2.il \
	testsuite/cslmntal/skiplist3.il

CLEANFILES = $(check_DATA)

LMNC = $(LMNTAL_HOME)/bin/lmntal
LMNCFLAGS = --hl-opt --slimcode -O3

%.il: %.lmntest
	awk -f create_testdata.awk $< | \
	$(LMNC) --stdin-lmn $(LMNCFLAGS) >$@
%.il: %.lmn
	$(LMNC) $(LMNCFLAGS) $< >$@

